# delia_ui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate
include/: version.h.in
src/: data_conversion.cpp  data_conversion.h  logger.cpp  logger.h  main.cpp  ui_common.h
src/drivers/ain/: ain.cpp  ain.h
src/drivers/sfc/: sfc.cpp  sfc.h
src/engine/: event.cpp  event.h  event_router.cpp  event_router.h  layer_info.cpp  layer_info.h  param.cpp  param.h  preset_id.cpp  preset_id.h  system_config.cpp  system_config.h  system_func.cpp  system_func.h  timer.cpp  timer.h  utils.cpp  utils.h
src/engine/managers/: arp_manager.cpp  arp_manager.h  base_manager.cpp  base_manager.h  daw_manager.cpp  daw_manager.h  file_manager.cpp  file_manager.h  midi_device_manager.cpp  midi_device_manager.h  pedals_manager.cpp  pedals_manager.h  seq_manager.cpp  seq_manager.h  sfc_manager.cpp  sfc_manager.h  sw_manager.cpp  sw_manager.h
src/engine/managers/gui/: gui_manager.cpp  gui_manager.h  gui_screens.cpp  gui_state.h  gui_utils.cpp
src/json_schemas/: config_schema.json  param_attributes_schema.json  param_lists_schema.json  param_map_schema.json  preset_schema.json
